# OpenGameInput

./: CMakeLists.txt  README.md
backends/glfw3/: ogi_impl_glfw3.cpp  ogi_impl_glfw3.hpp
examples/: CMakeLists.txt  demo_glfw3.cpp  test_info.cpp
include/oginput/: action.hpp  event.hpp  input.hpp  listener.hpp  ogi.hpp  system.hpp
src/: listener.cpp  ogi.cpp  system.cpp
